Compile time PI estimation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ include(colored_output)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_COMPILER g++)
-set(CMAKE_CXX_STANDARD 17)
-
+set(CMAKE_CXX_STANDARD 20)
 project(${PROJ})
 
 enable_testing()
@@ -15,5 +14,6 @@ add_subdirectory("variadic_templates")
 add_subdirectory("recursive_templates")
 add_subdirectory("pimpl idiom")
 add_subdirectory("tests")
-# add_subdirectory("casting")
+# add_subdirectory("static_polymorphism")
+add_subdirectory("compile_time_pi_estimation")
 # add_subdirectory("compile time stuff")
